style.css
@charset "utf-8";

@font-face
{
	font-family: "Lora";
	font-style: normal;
	font-weight: 400;
	src: url("/fonts/lora.ttf") format("truetype");
}

@font-face
{
	font-family: "Lora";
	font-style: italic;
	font-weight: 400;
	src: url("/fonts/lora-italic.ttf") format("truetype");
}

@font-face
{
	font-family: "Oxygen Mono";
	font-style: normal;
	font-weight: 400;
	src: url("/fonts/oxygen-mono.ttf") format("truetype");
}

@font-face
{
	font-family: "Asap";
	font-style: italic;
	font-weight: 400;
	src: url("/fonts/asap-italic.woff2") format("woff2");
}

* { box-sizing: border-box; }

body
{
	--text-color: #741;
	--background-color: #FED;
	--highlight-color: #7412;
	font-family: "Lora", serif;
	background: var(--background-color);
	color: var(--text-color);
	margin: 2em auto;
	padding: 0 2em;
	width: 25em;
	min-width: calc(50% + 4em);
	max-width: 100%;
	overflow-x: hidden;
	overflow-y: scroll;
	line-height: 1.75em;
	text-align: justify;
	position: relative;
	transition: 0.5s ease --background-color, 0.5s ease --text-color;
}

body[data-theme="cocoa"]
{
	--text-color: #FDA;
	--background-color: #531;
	--highlight-color: #FDA3;
}

body[data-theme="milk"]
{
	--text-color: #532;
	--background-color: #FDFAEE;
	--highlight-color: #5322;
}

body[data-theme="coffee"]
{
	--text-color: #DB8;
	--background-color: #310;
	--highlight-color: #DB83;
}

::selection
{
	background: var(--highlight-color);
}

html
{
	width: 100%;
	height: 100%;
}

p
{
	margin: 0.75em 0;
}

@media (max-width: 50em)
{
	body
	{
		text-align: left;
	}
}

::-webkit-scrollbar
{
	background: none;
	width: 0.25em;
	height: 0.25em;
}

::-webkit-scrollbar-track
{
	background: none;
}

::-webkit-scrollbar-track-piece
{
	background: none;
}

::-webkit-scrollbar-button
{
	display: none;
}

::-webkit-scrollbar-thumb
{
	background: var(--text-color);
	border-radius: 1em;
}

::-webkit-scrollbar-corner
{
	background: none;
}

hr
{
	border: none;
	background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 0 12 2" stroke="%23741" fill="none" stroke-width="0.125"><path d="M 0 1 C 1 0 3 2 4 1 M 4.5 1.5 5 0.5 M 5.5 1.5 6 0.5 M 6.5 1 C 7.5 0 9.5 2 10.5 1" /></svg>');
	background-position: center;
	background-repeat: no-repeat;
	margin: 0;
	height: 1em;
}

a, button, select
{
	all: unset;
	cursor: pointer;
	text-decoration: underline;
}

option
{
	background: initial;
	color: initial;
}

a:focus, button:focus
{
	outline: 0.0625em solid var(--text-color);
}

blockquote
{
	padding: 0 0 0 1em;
	position: relative;
	margin: 0.75em 0;
}

blockquote::before
{
	content: "";
	width: 0.25em;
	margin: 0.5em 0 0.5em;
	background: var(--text-color);
	border-radius: 1em;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
}

:not(pre) > code
{
	border-radius: 0.25em;
	padding: 0.25em;
	border: 0.0625em solid var(--text-color);
}

code, pre, .cm-comment
{
	font-family: "Oxygen Mono", monospace, sans-serif;
}

.cm-comment
{
	background: var(--highlight-color);
	padding: 0.25em 0;
}

pre, textarea, .CodeMirror-lines
{
	padding: 0.5em 0.75em;
	border-radius: 0.5em;
	border: 0.125em solid var(--text-color);
	overflow: auto;
	box-shadow: var(--highlight-color) 0 0 1em inset;
	text-align: left;
}

h1, h2, h3, h4, h5, h6, .cm-header
{
	font-family: "Asap", sans-serif;
	font-style: italic;
	font-weight: normal;
	margin: 0.75em 0;
	text-align: left;
}

h1 { font-size: 2em; }
h2 { font-size: 1.75em; }
h3 { font-size: 1.5em; }
h4 { font-size: 1.25em; }
h5 { font-size: 1.125em; }
h6 { font-size: 1.0625em; }
h5, h6 { font-weight: bold; }

.cm-header-1 { font-size: 1.5em; }
.cm-header-2 { font-size: 1.25em; }
.cm-header-3 { font-size: 1.125em; }
.cm-header-4, .cm-header-5, .cm-header-6 { font-size: 1.0625em; }
.cm-header-3, .cm-header-4 { font-weight: bold; }

textarea
{
	text-align: justify;
	background: none;
	color: inherit;
	resize: none;
	width: 100%;
	height: 16em;
	font: unset;
	outline: none;
	transition: 0.125s ease box-shadow;
	display: block;
	line-height: 1;
	padding: 0.75em
}

textarea:not(:focus), .CodeMirror:not(.CodeMirror-focused) .CodeMirror-lines { box-shadow: none; }

.submit
{
	text-align: right;
}

header
{
	font-weight: bold;
}

.response
{
	margin-left: 2em;
}

main > footer
{
	font-style: italic;
}

.option
{
	position: absolute;
	opacity: 0;
	pointer-events: none;
}

#options label[for]::before,
input[type="checkbox"],
input[type="radio"]
{
	content: "";
	width: 0.5em;
	height: 0.5em;
	border: 0.0625em solid var(--text-color);
	display: inline-block;
	margin: 0 0.5em 0 0;
	border-radius: 0.125em;
	appearance: none;
	-webkit-appearance: none;
	font: inherit;
	cursor: unset;
	outline: none;
}

.radio-group label { margin-left: 1em; }

#options .radio-group label::before,
input[type="radio"]
{ border-radius: 100%; }

:not(p).radio-group { display: inline-block; }

p.radio-group > label:first-child { margin-left: 0; }

#capitalization:checked ~ #options #capitalization-label::before,
#guidelines-none:checked ~ #options #guidelines-none-label::before,
#guidelines-3:checked ~ #options #guidelines-3-label::before,
#guidelines-4:checked ~ #options #guidelines-4-label::before,
#guidelines-5:checked ~ #options #guidelines-5-label::before,
#typesetting:checked ~ #options #typesetting-label::before,
#typesetting-pull:checked ~ #options #typesetting-pull-label::before,
#typesetting-hyphens:checked ~ #options #typesetting-hyphens-label::before,
input[type="radio"]:checked,
input[type="checkbox"]:checked
{
	background: radial-gradient(var(--text-color) 40%, #0000 40%);
}
/* ... */

